force-app/main/default/objects/Case_Escalation_Time__c/Case_Escalation_Time__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Case Escalation Time</label>
</CustomObject>