force-app/main/default/objects/Case_Escalation_Time__c/fields/Escalated_Time_for_Case_TS_Open__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Time_for_Case_TS_Open__c</fullName>
    <description>Escalated Time for TS Case (Open)</description>
    <label>Escalated Time for TS Case (Open)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>