force-app/main/default/objects/Case_Escalation_Time__c/fields/Escalated_Time_for_CS_Case_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Time_for_CS_Case_In_Progress__c</fullName>
    <label>Escalated Time for CS Case(In Progress)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>