force-app/main/default/objects/Case_Escalation_Time__c/fields/Escalated_Time_for_CS_Case_Open__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Time_for_CS_Case_Open__c</fullName>
    <description>Escalated Time for Customer Success  for Open</description>
    <label>Escalated Time for CS Case (Open)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>