force-app/main/default/objects/Case_Escalation_Time__c/fields/Escalated_Time_for_CS_Internal_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Time_for_CS_Internal_Feedback__c</fullName>
    <label>Escalated Time for CS(Customer Feedback)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>